tests/ui/parser/raw/raw-literal-self.rs
fn main() {
    let r#self: ();
    //~^ ERROR `self` cannot be a raw identifier
}
